# gym-super-mario-bros

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  Readme.md  __main__.py  generate_sample.py  main.sh  makefile  play.py  play_human.py  play_random.py  pyproject.toml  requirements.txt  run_random.py  setup.py  speedtest.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  conf.py  index.rst
gym_super_mario_bros/: __init__.py  __main__.py  _cli.py  _error.py  _human_play.py  _image_viewer.py  _play.py  _registration.py  _rom_mode.py  actions.py  cli.py  nes_env.py  nesenv.py  palette.py  smb2_env.py  smb3_env.py  smb3_stages.py  smb_env.py  smb_env_explore.py  smb_env_level.py  smb_env_straight.py  smb_level_env.py  smb_random_levels_env.py  smb_random_stages_env.py  smb_stage_env.py  tasks.py
gym_super_mario_bros/_app/: cli.py  play.py  play_human.py
gym_super_mario_bros/_roms/: __init__.py  decode_target.py  rom_path.py  super-mario-bros-2-downsample.nes  super-mario-bros-2.nes  super-mario-bros-lost-levels.nes  super-mario-bros-pixel.nes  super-mario-bros-rect.nes  super-mario-bros-rectangle.nes
gym_super_mario_bros/lua/: super-mario-bros.lua  super-mario.lua
gym_super_mario_bros/roms/: _remove_backgrounds.py  decode_target.py  remove-backgrounds.ipynb  remove-backgrounds.py  (+3 more)
ipynb/: Untitled.ipynb  test.ipynb
nesgym_super_mario_bros/: __init__.py  nesenv.py  smb_env.py
src/: _run_random.py  run-atari.py  run-mario.py  run-soccer.py
tools/: base.py  multimake_test.py  multiprocessing_test.py  threading_test.py
(+45 files in other folders)
