[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym_super_mario_bros"
version = "9.0.0"
description = "Super Mario Bros. for Gymnasium"
readme = "README.md"
requires-python = ">=3.13"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [
    {name = "Christian Kauten", email = "kautencreations@gmail.com"},
]
keywords = [
    "Gymnasium",
    "NES",
    "Super-Mario-Bros",
    "Super-Mario-Bros-2",
    "Super-Mario-Bros-3",
    "Lost-Levels",
    "Reinforcement-Learning-Environment",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=1.0.0",
    "nes-py>=9.0.1",
]

[project.scripts]
gym_super_mario_bros = "gym_super_mario_bros._app.cli:main"

[project.urls]
Homepage = "https://github.com/Kautenja/gym-super-mario-bros"
Repository = "https://github.com/Kautenja/gym-super-mario-bros"

[tool.setuptools.packages.find]
exclude = ["tests", "*.tests", "*.tests.*"]

[tool.setuptools.package-data]
gym_super_mario_bros = ["_roms/*.nes"]
